Import of SPROUT/WWW-Mechanize-Plugin-Ajax-0.05 from CPAN.
gitpan-cpan-distribution: WWW-Mechanize-Plugin-Ajax
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SPROUT/WWW-Mechanize-Plugin-Ajax-0.05.tar.gz
gitpan-cpan-author:       SPROUT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,28 +1,33 @@
---- #YAML:1.0
-name:                WWW-Mechanize-Plugin-Ajax
-version:             0.04
-abstract:            WWW::Mechanize plugin that provides the XMLHttpRequest object
-license:             ~
-author:              
-    - Father Chrysostomos <sprout & cpan . org>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         WWW-Mechanize-Plugin-Ajax
+version:      0.05
+version_from: lib/WWW/Mechanize/Plugin/Ajax.pm
+installdirs:  site
+requires:
     constant:                      1.03
     constant::lexical:             0
+    Encode:                        2.09
+    HTML::DOM::Event:              0
+    HTML::DOM::Exception:          0.013
     HTML::DOM::Interface:          0
+    HTTP::Cookies:                 0
     HTTP::Headers:                 0
     HTTP::Headers::Util:           0
     HTTP::Request:                 0
     HTTP::Response:                0
     lib:                           0
-    Scalar::Util:                  0
+    LWP::Protocol:                 0
+    Scalar::Util:                  1.09
     strict:                        0
     Test::More:                    0
+    URI:                           1
+    URI::Escape:                   0
     utf8:                          0
     warnings:                      0
-    WWW::Mechanize::Plugin::JavaScript: 0.003
+    WWW::Mechanize::Plugin::DOM:   0.005
+    WWW::Mechanize::Plugin::JavaScript: 0.004
     XML::DOM::Lite:                0
-meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.30
